# brawlmasters

./: CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  gmon.out
asset/: bunnymark_instanced.fs  bunnymark_instanced.vs
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
cmake/lib/: raygui.cmake  raylib.cmake
source/: Game.cpp  Game.hpp  game.cpp  game.hpp  main.cpp
source/intro/: benlib_intro.c  raylib_cpp_intro.c  raylib_intro.c
source/lib/: CMakeLists.txt  GameContext.cpp  GameContext.hpp  Player.cpp  Player.hpp  gameElementHandler.hpp  game_base.cpp  game_base.hpp  game_context.cpp  game_context.hpp  game_element_handler.hpp  math.hpp  player.cpp  player.hpp  raygui_interface.hpp  raylib_interface.hpp  rlgl.patch  vector.hpp  world.cpp  world.hpp
source/lib/logger/logger/: logger_base.hpp  logger_facade.hpp
source/lib/math/: CMakeLists.txt
source/lib/math/math/: math.hpp  vector.hpp
test/: CMakeLists.txt
test/source/: 2d_perlin_noise_exp.cpp  generator_test.cpp
test/source/Experimentation/: empty_example.cpp
test/source/benchmark/: basic_bench.cpp
test/source/test/: basic_test.cpp
